tests/dataset/tpc-h/compiler/cpp/q3.error
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:73:12: error: ‘o’ was not declared in this scope
   73 |   decltype(o.o_orderkey) o_orderkey;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:73:12: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:74:12: error: ‘o’ was not declared in this scope
   74 |   decltype(o.o_orderdate) o_orderdate;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:74:12: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:75:12: error: ‘o’ was not declared in this scope
   75 |   decltype(o.o_shippriority) o_shippriority;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:75:12: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:78:12: error: ‘o’ was not declared in this scope
   78 |   decltype(o) o;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:78:12: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:79:12: error: ‘l’ was not declared in this scope
   79 |   decltype(l) l;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:79:12: error: ‘l’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:247:26: error: ‘c’ was not declared in this scope
  247 |     std::vector<decltype(c)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:247:28: error: template argument 1 is invalid
  247 |     std::vector<decltype(c)> __items;
      |                            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:247:28: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:251:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  251 |       __items.push_back(c);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:256:26: error: ‘o’ was not declared in this scope
  256 |     std::vector<decltype(o)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:256:28: error: template argument 1 is invalid
  256 |     std::vector<decltype(o)> __items;
      |                            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:256:28: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:258:21: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  258 |       for (auto c : building_customers) {
      |                     ^~~~~~~~~~~~~~~~~~
      |                     std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:258:21: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  258 |       for (auto c : building_customers) {
      |                     ^~~~~~~~~~~~~~~~~~
      |                     std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:263:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  263 |         __items.push_back(o);
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:269:26: error: ‘l’ was not declared in this scope
  269 |     std::vector<decltype(l)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:269:28: error: template argument 1 is invalid
  269 |     std::vector<decltype(l)> __items;
      |                            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:269:28: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:273:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  273 |       __items.push_back(l);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:279:19: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  279 |     for (auto o : valid_orders) {
      |                   ^~~~~~~~~~~~
      |                   std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:279:19: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  279 |     for (auto o : valid_orders) {
      |                   ^~~~~~~~~~~~
      |                   std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:280:21: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  280 |       for (auto l : valid_lineitems) {
      |                     ^~~~~~~~~~~~~~~
      |                     std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:280:21: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  280 |       for (auto l : valid_lineitems) {
      |                     ^~~~~~~~~~~~~~~
      |                     std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:295:70: error: no matching function for call to ‘std::vector<__struct5>::vector(<brace-enclosed initializer list>)’
  295 |               __struct6{__key, std::vector<__struct5>{__struct5{o, l}}});
      |                                                                      ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; value_type = std::vector<__struct5>::value_type; allocator_type = std::allocator<__struct5>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; allocator_type = std::allocator<__struct5>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:306:56: error: request for member ‘l_extendedprice’ in ‘std::declval<__struct5>().__struct5::l’, which is of non-class type ‘int’
  306 |                            std::declval<__struct5>().l.l_extendedprice *
      |                                                        ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:307:62: error: request for member ‘l_discount’ in ‘std::declval<__struct5>().__struct5::l’, which is of non-class type ‘int’
  307 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:306:56: error: request for member ‘l_extendedprice’ in ‘std::declval<__struct5>().__struct5::l’, which is of non-class type ‘int’
  306 |                            std::declval<__struct5>().l.l_extendedprice *
      |                                                        ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:307:62: error: request for member ‘l_discount’ in ‘std::declval<__struct5>().__struct5::l’, which is of non-class type ‘int’
  307 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:307:76: error: template argument 1 is invalid
  307 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                                                                            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:307:76: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:310:34: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  310 |                          __items.push_back(
      |                                  ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:311:35: error: request for member ‘l_extendedprice’ in ‘r.__struct5::l’, which is of non-class type ‘int’
  311 |                              (r.l.l_extendedprice * ((1 - r.l.l_discount))));
      |                                   ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:311:63: error: request for member ‘l_discount’ in ‘r.__struct5::l’, which is of non-class type ‘int’
  311 |                              (r.l.l_extendedprice * ((1 - r.l.l_discount))));
      |                                                               ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:304:24:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:303:49: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  303 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:303:60: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  303 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                          ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:320:56: error: request for member ‘l_extendedprice’ in ‘std::declval<__struct5>().__struct5::l’, which is of non-class type ‘int’
  320 |                            std::declval<__struct5>().l.l_extendedprice *
      |                                                        ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:321:62: error: request for member ‘l_discount’ in ‘std::declval<__struct5>().__struct5::l’, which is of non-class type ‘int’
  321 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:320:56: error: request for member ‘l_extendedprice’ in ‘std::declval<__struct5>().__struct5::l’, which is of non-class type ‘int’
  320 |                            std::declval<__struct5>().l.l_extendedprice *
      |                                                        ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:321:62: error: request for member ‘l_discount’ in ‘std::declval<__struct5>().__struct5::l’, which is of non-class type ‘int’
  321 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:321:76: error: template argument 1 is invalid
  321 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                                                                            ^
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:321:76: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:324:34: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  324 |                          __items.push_back(
      |                                  ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:325:35: error: request for member ‘l_extendedprice’ in ‘r.__struct5::l’, which is of non-class type ‘int’
  325 |                              (r.l.l_extendedprice * ((1 - r.l.l_discount))));
      |                                   ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:325:63: error: request for member ‘l_discount’ in ‘r.__struct5::l’, which is of non-class type ‘int’
  325 |                              (r.l.l_extendedprice * ((1 - r.l.l_discount))));
      |                                                               ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:318:24:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:317:49: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  317 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:317:60: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  317 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                          ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:301:24: error: no matching function for call to ‘std::vector<std::pair<__struct8, __struct7> >::push_back(<brace-enclosed initializer list>)’
  301 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  302 |           {__struct8{(-([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  303 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  304 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  305 |                        std::vector<decltype((
      |                        ~~~~~~~~~~~~~~~~~~~~~~
  306 |                            std::declval<__struct5>().l.l_extendedprice *
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  307 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  308 |                            __items;
      |                            ~~~~~~~~
  309 |                        for (auto r : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  310 |                          __items.push_back(
      |                          ~~~~~~~~~~~~~~~~~~
  311 |                              (r.l.l_extendedprice * ((1 - r.l.l_discount))));
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  312 |                        }
      |                        ~
  313 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  314 |                      })())),
      |                      ~~~~~~~
  315 |                      g.key.o_orderdate},
      |                      ~~~~~~~~~~~~~~~~~~~
  316 |            __struct7{g.key.o_orderkey, ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  317 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  318 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  319 |                        std::vector<decltype((
      |                        ~~~~~~~~~~~~~~~~~~~~~~
  320 |                            std::declval<__struct5>().l.l_extendedprice *
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  321 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  322 |                            __items;
      |                            ~~~~~~~~
  323 |                        for (auto r : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  324 |                          __items.push_back(
      |                          ~~~~~~~~~~~~~~~~~~
  325 |                              (r.l.l_extendedprice * ((1 - r.l.l_discount))));
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  326 |                        }
      |                        ~
  327 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  328 |                      })()),
      |                      ~~~~~~
  329 |                      g.key.o_orderdate, g.key.o_shippriority}});
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<__struct8, __struct7>; _Alloc = std::allocator<std::pair<__struct8, __struct7> >; value_type = std::pair<__struct8, __struct7>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<__struct8, __struct7> >::value_type&’ {aka ‘const std::pair<__struct8, __struct7>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<__struct8, __struct7>; _Alloc = std::allocator<std::pair<__struct8, __struct7> >; value_type = std::pair<__struct8, __struct7>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<__struct8, __struct7> >::value_type&&’ {aka ‘std::pair<__struct8, __struct7>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq32375935580/001/prog.cpp:339:5: error: conversion from ‘vector<__struct7>’ to non-scalar type ‘vector<__struct5>’ requested
  277 |   std::vector<__struct5> order_line_join = ([&]() {
      |                                            ~~~~~~~~
  278 |     std::vector<__struct6> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  279 |     for (auto o : valid_orders) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  280 |       for (auto l : valid_lineitems) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  281 |         if (!((l.l_orderkey == o.o_orderkey)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  282 |           continue;
      |           ~~~~~~~~~
  283 |         auto __key =
      |         ~~~~~~~~~~~~
  284 |             OrderLineJoin{o.o_orderkey, o.o_orderdate, o.o_shippriority};
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  285 |         bool __found = false;
      |         ~~~~~~~~~~~~~~~~~~~~~
  286 |         for (auto &__g : __groups) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  287 |           if (__g.key == __key) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~
  288 |             __g.items.push_back(__struct5{o, l});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  289 |             __found = true;
      |             ~~~~~~~~~~~~~~~
  290 |             break;
      |             ~~~~~~
  291 |           }
      |           ~
  292 |         }
      |         ~
  293 |         if (!__found) {
      |         ~~~~~~~~~~~~~~~
  294 |           __groups.push_back(
      |           ~~~~~~~~~~~~~~~~~~~
  295 |               __struct6{__key, std::vector<__struct5>{__struct5{o, l}}});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  296 |         }
      |         ~
  297 |       }
      |       ~
  298 |     }
      |     ~
  299 |     std::vector<std::pair<__struct8, __struct7>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  300 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  301 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  302 |           {__struct8{(-([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  303 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  304 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  305 |                        std::vector<decltype((
      |                        ~~~~~~~~~~~~~~~~~~~~~~
  306 |                            std::declval<__struct5>().l.l_extendedprice *
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  307 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  308 |                            __items;
      |                            ~~~~~~~~
  309 |                        for (auto r : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  310 |                          __items.push_back(
      |                          ~~~~~~~~~~~~~~~~~~
  311 |                              (r.l.l_extendedprice * ((1 - r.l.l_discount))));
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  312 |                        }
      |                        ~
  313 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  314 |                      })())),
      |                      ~~~~~~~
  315 |                      g.key.o_orderdate},
      |                      ~~~~~~~~~~~~~~~~~~~
  316 |            __struct7{g.key.o_orderkey, ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  317 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  318 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  319 |                        std::vector<decltype((
      |                        ~~~~~~~~~~~~~~~~~~~~~~
  320 |                            std::declval<__struct5>().l.l_extendedprice *
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  321 |                            ((1 - std::declval<__struct5>().l.l_discount))))>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  322 |                            __items;
      |                            ~~~~~~~~
  323 |                        for (auto r : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  324 |                          __items.push_back(
      |                          ~~~~~~~~~~~~~~~~~~
  325 |                              (r.l.l_extendedprice * ((1 - r.l.l_discount))));
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  326 |                        }
      |                        ~
  327 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  328 |                      })()),
      |                      ~~~~~~
  329 |                      g.key.o_orderdate, g.key.o_shippriority}});
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  330 |     }
      |     ~
  331 |     std::sort(__items.begin(), __items.end(), [](auto &a, auto &b) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  332 |       return std::tie(a.first.f0, a.first.f1) <
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  333 |              std::tie(b.first.f0, b.first.f1);
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  334 |     });
      |     ~~~
  335 |     std::vector<__struct7> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  336 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  337 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  338 |     return __res;
      |     ~~~~~~~~~~~~~
  339 |   })();
      |   ~~^~
